[project]
name = "the-best-boi-project"
version = "4.0.0"
description = "The official Bestboi Project website."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-babel>=4.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "commitizen>=4.16.3",
]

[tool.black]
line-length = 80
skip-string-normalization = true
skip-magic-trailing-comma = false
